--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "latest": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "2.1.3",
-    "styled-components": "^4.1.3",
+    "react-scripts": "^5.0.1",
     "tachyons": "^4.11.1",
     "tachyons-cli": "^1.3.2"
   },
