--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "postcss": "^8.5.1",
+    "postcss-normalize": "^13.0.1",
+    "postcss-preset-env": "^10.1.3",
+    "postcss-rtl": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
