--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postcss-normalize": "^13.0.1",
     "postcss-preset-env": "^10.1.3",
     "postcss-rtl": "^2.0.0",
+    "rc-progress": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
