--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "rc-progress": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^7.1.5",
     "react-scripts": "^5.0.1",
     "react-scroll-trigger": "^0.6.14",
     "tachyons": "^4.11.1",
